# versioned-pickle

./: README.md  ci_environment.yaml  environment.yaml  pyproject.toml  setup.cfg  setup.py  test.pkl
.github/workflows/: build.yaml  lint.yaml  lint_test.yaml
docs/: .buildinfo  API_reference.html  README.md  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: API_reference.md.txt  index.md.txt
docs/source/: conf.py  index.md  index.rst.nouse
tests/: test_integration.py  test_versioned_pickle.py
tests/test_pkg/: setup.py
tests/testing_pkg/: setup.py
tests/testing_pkg/testing_pkg/: __init__.py
versioned_pickle/: __init__.py
