[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "dirty-tag"

[tool.pytest.ini_options]
# skip integration tests by default with bare 'pytest' (use -m 'integration or not integration' to include)
addopts = "-m 'not integration' --cov=versioned_pickle"

[tool.black]
line-length = 100