[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "versioned-pickle"
description = "A small utility package for adding environment metadata to pickles and warning on mismatch when loaded"
readme = "README.md"
authors = [{name="Asaf Reich", email="asafspades@gmail.com"}]
dependencies = [
    'importlib-metadata>=4.4;python_version<"3.10"',
    "typing-extensions>=3.10"
]

urls = {homepage="https://github.com/a-reich/versioned_pickle"}
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dynamic = ["version"]
[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "pytest-cov", "requests"]

[tool.setuptools_scm]
local_scheme = "dirty-tag"

[tool.pytest.ini_options]
# skip integration tests by default with bare 'pytest' (use -m 'integration or not integration' to include)
addopts = "-m 'not integration' --cov=versioned_pickle"

[tool.black]
line-length = 100

[tool.mypy]
strict = true
show_error_codes = true
disallow_untyped_calls = false
